<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="290dp"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_coner3_stroke0_5_colorf">


        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:text="请选中参与方式"
            android:textColor="@color/color_4A4A4A"
            android:textSize="18sp" />


        <CheckBox
            android:id="@+id/cbExchangeCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/layout_dialog_confirm_title"
            android:layout_marginLeft="20dp"
            android:button="@drawable/common_bg_exchange_heckbox"
            android:text="@string/join_with_exchange_code"
            android:checked="true"
            android:textColor="@color/color_3"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tip1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cbExchangeCode"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="10dp"
            android:text="@string/tip_join_exchange_code"
            android:textColor="@color/color_6"
            android:textSize="13sp" />

        <CheckBox
            android:id="@+id/cbPoint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tip1"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/color_3"
            android:button="@drawable/common_bg_exchange_heckbox"
            android:text="@string/join_with_point" />


        <TextView
            android:id="@+id/tip2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cbPoint"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="10dp"
            android:text="@string/tip_join_point"
            android:textColor="@color/color_6"
            android:textSize="13sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tip2"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="取消"
                android:textColor="#1982FF"
                android:textSize="14sp" />


            <TextView
                android:id="@+id/btnConfirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="确定"
                android:textColor="@color/color_3"
                android:textSize="14sp" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
