<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.IntelligentLearnListFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/ll_tab"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="10dp"
        android:background="@mipmap/studyproject_bg_learn_tab_unchecked"
        android:orientation="horizontal"
        android:padding="1dp">

        <TextView
            android:id="@+id/tabMustLearn"
            android:layout_width="72dp"
            app:layout_constraintLeft_toLeftOf="parent"

            android:layout_height="match_parent"
            android:background="@color/color_B6EBD4"
            android:gravity="center"
            android:text="@string/title_learn_unfinish"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/sp_14" />

        <View
            android:id="@+id/line_one"
            app:layout_constraintLeft_toRightOf="@+id/tabMustLearn"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary" />
        <TextView
            app:layout_constraintLeft_toRightOf="@+id/line_one"
            android:id="@+id/tabChoseLearn"
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:visibility="gone"
            tools:visibility="visible"

            android:gravity="center"
            android:text="@string/title_chose_learn"
            android:textColor="@color/color_94BFAC"
            android:textSize="@dimen/sp_14" />

        <View
            app:layout_constraintLeft_toRightOf="@+id/tabChoseLearn"
            android:id="@+id/line_two"
            android:layout_width="1dp"
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary" />

        <TextView
            app:layout_constraintLeft_toRightOf="@+id/line_two"

            android:id="@+id/tabFinish"
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/title_learn_hasfinish"
            android:textColor="@color/color_94BFAC"
            android:textSize="@dimen/sp_14" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.viewpager2.widget.ViewPager2
        app:layout_constraintTop_toBottomOf="@+id/ll_tab"
        android:id="@+id/viewPager"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_height="0dp" />
</androidx.constraintlayout.widget.ConstraintLayout>